# orne_large

./: README.md
orne_large/: CMakeLists.txt  package.xml
orne_large_arduino/: BLMComm.cpp  BLMComm.h  BLMMotor.cpp  BLMMotor.h  Doxyfile  README.md  debug.cpp  debug.h  mb_arduino.ino  orne_large_arduino.h
orne_large_bringup/: CMakeLists.txt  package.xml
orne_large_bringup/launch/: orne_large.launch  orne_large_sim.launch
orne_large_bringup/scripts/: timed_roslaunch.sh
orne_large_control/: CMakeLists.txt  package.xml
orne_large_control/config/: orne_large_controller.yaml
orne_large_control/launch/: orne_large_control.launch
orne_large_description/: CMakeLists.txt  package.xml
orne_large_description/meshes/STL/: tire.stl
orne_large_description/robots/: orne_large.xacro
orne_large_description/urdf/: common.gazebo.xacro
orne_large_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
orne_large_description/urdf/sensors/imu/: imu.gazebo.xacro  imu.urdf.xacro
orne_large_description/urdf/sensors/lrf/: lrf.gazebo.xacro  lrf.urdf.xacro
orne_large_description/urdf/wheel/: wheel.gazebo.xacro  wheel.transmission.xacro  wheel.urdf.xacro
orne_large_driver/: CMakeLists.txt  package.xml
orne_large_driver/config/: orne_large_driver.yaml  orne_large_driver_with_arduino.yaml
orne_large_driver/include/orne_large_driver/: blm.h
orne_large_driver/launch/: driver.launch  driver_with_arduino.launch
orne_large_driver/src/: blm.cpp  orne_large_driver.cpp  orne_large_driver_with_arduino.cpp
orne_large_gazebo/: CMakeLists.txt  package.xml
orne_large_gazebo/launch/: gazebo_orne_large.launch
