<?xml version="1.0"?>
<package format="2">
  <name>orne_large</name>
  <version>0.0.0</version>
  <description>The orne_large package</description>

  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">yasuohayashibara</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>orne_large_bringup</build_depend>
  <build_depend>orne_large_control</build_depend>
  <build_depend>orne_large_description</build_depend>
  <build_depend>orne_large_driver</build_depend>
  <build_depend>orne_large_gazebo</build_depend>

  <export>
  </export>

</package>
