<?xml version="1.0"?>
<package format="2">
  <name>orne_large_bringup</name>
  <version>0.0.0</version>
  <description>The orne_large_bringup package</description>

  <maintainer email="supratmanjoshua@gmail.com">Joshua Supratman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
