<?xml version="1.0"?>
<package format="2">
  <name>orne_large_control</name>
  <version>0.0.0</version>
  <description>The orne_large_control package</description>

  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">Yasuo Hayashibara</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>ros_controllers</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>velocity_controllers</build_depend>

  <export>
  </export>
</package>
