<?xml version="1.0"?>
<package>
  <name>orne_large_description</name>
  <version>0.0.0</version>
  <description>The orne_large_description package</description>

  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">Yasuo Hayashibara</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
